compiler-skeleton/tests/compile-error/function_param4.ln
def fn2(z:bool):bool{
	return !z;
}
x:bool;
x = fn2(5);